# bannerlord-matchmaker

./: .gitignore  README.md  config-default.yaml  config-matchmaking.json  logging.yaml  pyproject.toml
.github/workflows/: main.yml
app/: __main__.py  adapters.py  config.py  converters.py  enums.py  exceptions.py  helpers.py  log_config.py  main.py  matchmaking_config.py
app/api/: app.py  app_builder.py  routes.py  schema.py
app/client/: auth.py
app/matchmaker/: controller.py  map.py  player.py  player_picker.py  player_pool.py  team.py
app/matchmaker/game/: balancer_rules.py  player_balancer.py  role_picker.py  role_picker_rules.py  role_swap.py  team.py  team_creating_rules.py  teams_creator.py
app/matchmaker/matchups/: biaser.py  map.py  matchup.py  matchup_picker.py
matchmaker/: __main__.py  config.py
src/: converters.py  enums.py  log_config.py  main.py  matchmaking_config.py
src/api/: schema.py
src/client/: auth.py
src/matchmaker/: controller.py  player.py  player_picker.py
src/matchmaker/game/: role_picker.py  team.py  team_creating_rules.py
src/matchmaker/matchups/: biaser.py  faction.py  map.py  matchup.py  matchup_picker.py
tests/: builders.py  conftest.py  test_matchmaking_config.py  test_test_builders.py
tests/matchmaker/: test_player.py
tests/matchmaker/game/: test_player_balancer.py  test_role_picker.py  test_role_swap.py
tests/matchmaker/matchups/: test_matchup_picker.py
tests/test_data/: all_cav.json  all_inf.json  default_players.json  two_mmr_groups.json
