[tool.poetry]
name = "bl-matchmaker"
version = "0.1.0"
description = "Matchmaker service for Bannerlord Matchmaking system"
authors = ["Forsee41 <forsee41@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
pyyaml = "^6.0"
uvicorn = "^0.20.0"
fastapi-utils = "^0.2.1"
httpx = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
executionEnvironments = [{ root = "tests", extraPaths = ["src"]}]

[tool.black]
line-length = 88

[mypy]
mypy_path = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


